Added data table and controller for navigation Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/reports/fixed_asset_issue.xhtml
+++ b/src/main/webapp/reports/fixed_asset_issue.xhtml
@@ -44,7 +44,7 @@
                             <p:selectOneMenu>
                                 <f:selectItem itemLabel="Select Vendor"/>
                             </p:selectOneMenu>
-                        </h:panelGrid>
+                        </h:panelGrid><br/>
 
                         <p:dataTable value="#{searchController.telephoneNumbers}" var="b" id="tb1" rowIndexVar="i"
                                      rowKey="#{b}" 
