--- a/src/main/webapp/opd/patient_search.xhtml
+++ b/src/main/webapp/opd/patient_search.xhtml
@@ -7,7 +7,7 @@
       xmlns:p="http://primefaces.org/ui">
 
     <h:head>
-        <title>Patient Search</title>
+        <title>Patient Lookup &amp; Registration</title>
         <h:outputStylesheet library="css" name="styles.css" ></h:outputStylesheet>
     </h:head>
     <h:body>
@@ -19,7 +19,7 @@
                 <h:form>
                     <div class="card" >
                         <div class="card-header" >
-                            <h4>Patient Search</h4>
+                            <h4>Patient Lookup &amp; Registration</h4>
                         </div>
                         <div class="card-body" >
                             <div class="row">
@@ -106,29 +106,29 @@
                                         </p:column>
                                         <p:column headerText="Actions">
                                             <div class="d-flex justify-content-between">
-                                                <p:commandButton value="Profile" action="#{patientController.navigateToOpdPatientProfile()}" ajax="false" styleClass="mx-2">
+                                                <p:commandButton value="Profile" action="#{patientController.navigateToOpdPatientProfile()}" ajax="false" styleClass="mx-1">
                                                     <f:setPropertyActionListener value="#{p}" target="#{patientController.current}" />
                                                 </p:commandButton>
                                                 <p:commandButton value="Edit" 
-                                                                 action="#{patientController.navigateToOpdPatientEdit()}" ajax="false" styleClass="mx-2">
+                                                                 action="#{patientController.navigateToOpdPatientEdit()}" ajax="false" styleClass="mx-1">
                                                     <f:setPropertyActionListener value="#{p}" target="#{patientController.current}" />
                                                 </p:commandButton>
                                                 <p:commandButton value="OPD Bill" 
                                                                  action="#{patientController.navigateToOpdBillFromOpdPatient()}" 
                                                                  ajax="false" 
-                                                                 styleClass="mx-2">
+                                                                 styleClass="mx-1">
                                                     <f:setPropertyActionListener value="#{p}" target="#{patientController.current}" />
                                                 </p:commandButton>
-                                                <p:commandButton value="OPD Bill for Cashier" action="#{patientController.toEmrPatientProfile()}" ajax="false" styleClass="mx-2">
+                                                <p:commandButton value="OPD Bill for Cashier" action="#{patientController.toEmrPatientProfile()}" ajax="false" styleClass="mx-1">
                                                     <f:setPropertyActionListener value="#{p}" target="#{patientController.current}" />
                                                 </p:commandButton>
-                                                <p:commandButton value="Accept Payments" action="#{patientController.toEmrPatientProfile()}" ajax="false" styleClass="mx-2">
+                                                <p:commandButton value="Accept Payments" action="#{patientController.toEmrPatientProfile()}" ajax="false" styleClass="mx-1">
                                                     <f:setPropertyActionListener value="#{p}" target="#{patientController.current}" />
                                                 </p:commandButton>
-                                                <p:commandButton value="Refunds" action="#{patientController.toEmrPatientProfile()}" ajax="false" styleClass="mx-2">
+                                                <p:commandButton value="Refunds" action="#{patientController.toEmrPatientProfile()}" ajax="false" styleClass="mx-1">
                                                     <f:setPropertyActionListener value="#{p}" target="#{patientController.current}" />
                                                 </p:commandButton>
-                                                <p:commandButton value="Lab Reports" action="#{patientController.toEmrPatientProfile()}" ajax="false" styleClass="mx-2">
+                                                <p:commandButton value="Lab Reports" action="#{patientController.toEmrPatientProfile()}" ajax="false" styleClass="mx-1">
                                                     <f:setPropertyActionListener value="#{p}" target="#{patientController.current}" />
                                                 </p:commandButton>
 
