--- a/src/main/webapp/opd/opd_search.xhtml
+++ b/src/main/webapp/opd/opd_search.xhtml
@@ -22,39 +22,39 @@
                             <div class="col-md-2">
                                 <div class="form d-flex flex-column" >
                                     <h:outputLabel value="From Date"/>
-                                    <p:calendar id="fromDate" value="#{searchController.fromDate}" navigator="false" pattern="dd MMMM yyyy hh mm ss a" class="w-100" inputStyleClass="form-control">      
+                                    <p:calendar id="fromDate" value="#{opdBillController.fromDate}" navigator="false" pattern="dd MMMM yyyy hh mm ss a" class="w-100" inputStyleClass="form-control">      
                                     </p:calendar>
                                     <p:spacer height="10" width="5" ></p:spacer>
 
                                     <h:outputLabel value="To Date"/>
-                                    <p:calendar id="toDate" value="#{searchController.toDate}" navigator="false" pattern="dd MMMM yyyy hh mm ss a" class="w-100" inputStyleClass="form-control">                                                                              
+                                    <p:calendar id="toDate" value="#{opdBillController.toDate}" navigator="false" pattern="dd MMMM yyyy hh mm ss a" class="w-100" inputStyleClass="form-control">                                                                              
                                     </p:calendar>
                                     <p:spacer height="10" width="5" ></p:spacer>
 
                                     <p:inputText placeholder="Bill No" autocomplete="off" class="w-100"
-                                                 value="#{searchController.searchKeyword.billNo}" />
+                                                 value="#{opdBillController.searchKeyword.billNo}" />
                                     <p:spacer height="10" width="5" ></p:spacer>
 
                                     <p:inputText placeholder="Name" class="form-control"
                                                  autocomplete="off" 
-                                                 value="#{searchController.searchKeyword.patientName}" />
+                                                 value="#{opdBillController.searchKeyword.patientName}" />
                                     <p:spacer height="10" width="5" ></p:spacer>
 
                                     <p:inputText placeholder="Phone" class="form-control"
                                                  autocomplete="off"  
-                                                 value="#{searchController.searchKeyword.patientPhone}" />
+                                                 value="#{opdBillController.searchKeyword.patientPhone}" />
                                     <p:spacer height="10" width="5" ></p:spacer>
 
                                     <p:inputText placeholder="Total" class="form-control"
                                                  autocomplete="off"  
-                                                 value="#{searchController.searchKeyword.total}"
+                                                 value="#{opdBillController.searchKeyword.total}"
                                                  />
                                     <p:spacer height="10" width="5" ></p:spacer>
 
 
                                     <p:inputText placeholder="Net Total"   class="form-control"
                                                  autocomplete="off"
-                                                 value="#{searchController.searchKeyword.netTotal}"/>
+                                                 value="#{opdBillController.searchKeyword.netTotal}"/>
                                     <p:spacer height="10" width="5" ></p:spacer>
 
 
