Signed-off-by: PasinduW99 <pwathsara@gmail.com>

--- a/src/main/webapp/theater/inward_bill_surgery.xhtml
+++ b/src/main/webapp/theater/inward_bill_surgery.xhtml
@@ -36,7 +36,7 @@
                 <p:panel id="panThe" >
                     <p:panel > 
                         <f:facet name="header">
-                            <h:outputLabel value="Surgery &amp; BHT Detail"/>
+                            <h:outputLabel value="Surgery &amp; BHT Details"/>
                         </f:facet>
                         <h:panelGrid columns="2">
                             <p:panel>
