Signed-off-by: Thiwanka Madushan <76912747+Thiwanka570@users.noreply.github.com>

--- a/src/main/webapp/inward/inward_bill_service.xhtml
+++ b/src/main/webapp/inward/inward_bill_service.xhtml
@@ -13,7 +13,7 @@
 
     <ui:define name="content">
 
-
+sdsdsd
         <h:panelGroup rendered="true" styleClass="opdPanel" >
             <h:form id="form">     
                 <p:panel rendered="#{!billBhtController.printPreview}">
